test/files/neg/macro-bundle-abstract.check
macro-bundle-abstract.scala:10: error: macro bundles must be concrete monomorphic classes having a single constructor with a `val c: Context` parameter
  def foo = macro Bundle.impl
                  ^
one error found
